syntax = "proto3";
package api;

import "google/protobuf/any.proto";

// Action Wrapper
// There is a `call_imkey_api` method in tcx which act as a endpoint like RPC. It accepts a `ImkeyAction` param which method field is
// the real action and param field is the real param of that method.
// When an error occurred, the `call_imkey_api` will return a `Response` which isSuccess field be false and error field is the reason
// which cause the error.
message ImkeyAction {
    string method = 1;
    google.protobuf.Any param = 2;
}

// A common response when error occurred.
message Response {
    bool isSuccess = 1;
    string error = 2;
}